--- a/views/submission-manager/header_template.html
+++ b/views/submission-manager/header_template.html
@@ -3,13 +3,18 @@
 	   <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate image_loading checkImage" ng-show="!submission.bEvaluated"></span>
 	   <span class="glyphicon glyphicon-ok image_succeed_task checkImage" ng-show="submission.bEvaluated && submission.iSuccess == 1"></span>
 	   <span class="glyphicon glyphicon-remove image_failure_task checkImage" ng-show="submission.bEvaluated && !submission.iSuccess"></span>
-	   Soumission en {{submission.sourceCode.sParams.sLangProg}}
-	   le {{submission.sDate | date:'dd/MM/yyyy à HH:mm'}}
+	   <span ng-show="submission.bEvaluated">
+	      Soumission en {{submission.sourceCode.sParams.sLangProg}}
+	      le {{submission.sDate | date:'dd/MM/yyyy à HH:mm'}}
+	   </span>
+	   <span ng-show="!submission.bEvaluated">
+	      Soumission en cours d'évaluation...
+	   </span>
 	</span>
 	
 	<span class="submission_span submission_data"> <!-- centered data -->
 	</span>
-	<span class="submission_span score" ng-if="submission.bEvaluated">Score : {{submission.iScore}} / 100</span>
+	<span class="submission_span score" ng-if="submission.bEvaluated">Score : {{submission.iScore}} %</span>
 	<span class="submission_span score" ng-if="!submission.bEvaluated">Évaluation en cours...</span>
 
 	<br>
