attempt to update with new uib version

--- a/views/submission-manager/submission.html
+++ b/views/submission-manager/submission.html
@@ -1,10 +1,10 @@
 <div class="submission_global">
    <div ng-if="submission != undefined" ng-hide="loading">
-      <accordion close-others="false">
-         <accordion-group is-open="showSubmission">
-            <accordion-heading>
+      <uib-accordion close-others="false">
+         <uib-accordion-group is-open="showSubmission">
+            <uib-accordion-heading>
                <div ng-include src="'submission-manager/header_template.html'"></div>
-            </accordion-heading>
+            </uib-accordion-heading>
             <div ng-if="submission != undefined && !submission.bEvaluated && !loading" class="submission_global">
                <div class="submission_error">
                   <p>
@@ -17,7 +17,7 @@
                   <strong>Erreur de compilation :</strong><br />
                   <pre>{{submission.sCompilMsg}}</pre>
                </div>
-               
+
                <div ng-show="!(submission.tests.length > 0) && !submission.bCompilError && submission.bEvaluated" class="submission_error">
                   <p>
                      Il n'existe pas de tests pour ce problème.
@@ -29,22 +29,22 @@
                      <pre>{{submission.sCompilMsg}}</pre>
                   </div>
                   <div ng-if="submission.submissionSubtasks.length > 0">
-                     <accordion close-others="true">
-                        <accordion-group ng-repeat="submissionSubtask in submission.submissionSubtasks" class="subtask_global" is-open="submissionSubtask.cached.showDetailsTests">
+                     <uib-accordion close-others="true">
+                        <uib-accordion-group ng-repeat="submissionSubtask in submission.submissionSubtasks" class="subtask_global" is-open="submissionSubtask.cached.showDetailsTests">
                            <div ng-include src="'submission-manager/view_subtask.html'"></div>
-                        </accordion-group>
-                     </accordion>
+                        </uib-accordion-group>
+                     </uib-accordion>
                   </div>
                   <div class="test" ng-if="submission.submissionSubtasks.length == 0">
-                     <accordion close-others="true">
-                        <accordion-group ng-repeat="curTest in submission.tests | orderBy : curTest.iRank" is-open="curTest.cached.isShown">
+                     <uib-accordion close-others="true">
+                        <uib-accordion-group ng-repeat="curTest in submission.tests | orderBy : curTest.iRank" is-open="curTest.cached.isShown">
                            <div ng-include src="'submission-manager/view_test.html'"></div>
-                        </accordion-group>
-                     </accordion>
+                        </uib-accordion-group>
+                     </uib-accordion>
                   </div>
                </div> <!-- End tests -->
-            </div> 
-         </accordion-group>
-      </accordion>
+            </div>
+         </uib-accordion-group>
+      </uib-accordion>
    </div> <!-- End submission details -->
 </div> <!-- End submission -->
