--- a/views/submission-manager/header_template.html
+++ b/views/submission-manager/header_template.html
@@ -1,32 +1,32 @@
 <div class="submission" ng-if="!loading">
-	<span class="submission_span submission_info">
-	   <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate image_loading checkImage" ng-show="!submission.bEvaluated"></span>
-	   <span class="glyphicon glyphicon-ok image_succeed_task checkImage" ng-show="submission.bEvaluated && submission.iSuccess == 1"></span>
-	   <span class="glyphicon glyphicon-remove image_failure_task checkImage" ng-show="submission.bEvaluated && !submission.iSuccess"></span>
-	   <span ng-show="submission.bEvaluated">
-	      Soumission en {{submission.sourceCode.sParams.sLangProg}}
-	      le {{submission.sDate | date:'dd/MM/yyyy à HH:mm'}}
-	   </span>
-	   <span ng-show="!submission.bEvaluated">
-	      Soumission en cours d'évaluation...
-	   </span>
-	</span>
-	
-	<span class="submission_span submission_data"> <!-- centered data -->
-	</span>
-	<span class="submission_span score" ng-if="submission.bEvaluated">Score : {{submission.iScore}} %</span>
-	<span class="submission_span score" ng-if="!submission.bEvaluated">Évaluation en cours...</span>
+   <span class="submission_span submission_info">
+      <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate image_loading checkImage" ng-show="!submission.bEvaluated"></span>
+      <span class="glyphicon glyphicon-ok image_succeed_task checkImage" ng-show="submission.bEvaluated && submission.bSuccess"></span>
+      <span class="glyphicon glyphicon-remove image_failure_task checkImage" ng-show="submission.bEvaluated && !submission.bSuccess"></span>
+      <span ng-show="submission.bEvaluated">
+         Soumission en {{submission.sourceCode.params.sLangProg}}
+         le {{submission.sDate | date:'dd/MM/yyyy à HH:mm'}}
+      </span>
+      <span ng-show="!submission.bEvaluated">
+         Soumission en cours d'évaluation...
+      </span>
+   </span>
 
-	<br>
-	   
-	<span class="submission_details" ng-if="submission.bEvaluated">
-	   <span ng-if="submission.submissionSubtasks.length > 0">Sous-tâches validées : {{submissionManager.countSubtasksSucceeded(submission)}} / {{submission.submissionSubtasks.length}}</span>
-	   <span ng-if="submission.submissionSubtasks.length == 0">Test validés : {{submission.nbTestsPassed}} / {{submission.nbTestsTotal}}</span>
-	   &nbsp;&nbsp;
-	   <span class="submission_min_test disp_min" ng-if="!submission.submissionSubtasks" ng-repeat="curTest in submission.tests" ng-include src="'submission-manager/view_test_min.html'"></span>
-	   <span class="submission_min_test" ng-if="submission.submissionSubtasks" ng-repeat="submissionSubtask in submission.submissionSubtasks">
-		  <span ng-repeat="curTest in submissionSubtask.submissionTests" ng-include src="'submission-manager/view_test_min.html'"  class="disp_min"></span>
-		  &nbsp;&nbsp;
-	   </span>
-	</span>
+   <span class="submission_span submission_data"> <!-- centered data -->
+   </span>
+   <span class="submission_span score" ng-if="submission.bEvaluated">Score : {{submission.iScore}} %</span>
+   <span class="submission_span score" ng-if="!submission.bEvaluated">Évaluation en cours...</span>
+
+   <br>
+
+   <span class="submission_details" ng-if="submission.bEvaluated">
+      <span ng-if="submission.submissionSubtasks.length > 0">Sous-tâches validées : {{submissionManager.countSubtasksSucceeded(submission)}} / {{submission.submissionSubtasks.length}}</span>
+      <span ng-if="submission.submissionSubtasks.length == 0">Test validés : {{submission.nbTestsPassed}} / {{submission.nbTestsTotal}}</span>
+      &nbsp;&nbsp;
+      <span class="submission_min_test disp_min" ng-if="!submission.submissionSubtasks" ng-repeat="curTest in submission.tests" ng-include src="'submission-manager/view_test_min.html'"></span>
+      <span class="submission_min_test" ng-if="submission.submissionSubtasks" ng-repeat="submissionSubtask in submission.submissionSubtasks">
+        <span ng-repeat="curTest in submissionSubtask.submissionTests" ng-include src="'submission-manager/view_test_min.html'"  class="disp_min"></span>
+        &nbsp;&nbsp;
+      </span>
+   </span>
  </div>
