handle test.sLog

--- a/views/submission-manager/view_test.html
+++ b/views/submission-manager/view_test.html
@@ -122,4 +122,8 @@
       Message d'erreur renvoyé à l'évaluation :
       <pre>{{curTest.sErrorMsg}}</pre>
    </div>
+   <div ng-if="curTest.sLog">
+      Message d'évaluation :
+      <pre>{{curTest.sLog}}</pre>
+   </div>
 </div>
