subtasks score correction

--- a/views/submission-manager/view_subtask.html
+++ b/views/submission-manager/view_subtask.html
@@ -16,7 +16,7 @@
       </span>
 
       <span class="score">
-         Score : {{round(submissionSubtask.iScore * submissionSubtask.subtask_iPointsMax / 100)}} / {{submissionSubtask.subtask_iPointsMax}}
+         Score : {{submissionSubtask.iScore}} / {{submissionSubtask.subtask_iPointsMax}}
       </span>
    </div>
 </uib-accordion-heading>
