--- a/views/submission-manager/view_test.html
+++ b/views/submission-manager/view_test.html
@@ -122,7 +122,7 @@
       </span>
    </div>
    <div ng-if="curTest.sErrorMsg">
-      Message d'erreur renvoyé à l'évaluation :
+      Votre programme a renvoyé une erreur lors de l'évaluation :
       <pre>{{curTest.sErrorMsg}}</pre>
    </div>
    <div ng-if="(curTest.sLog || curTest.jFiles) && !hasAnimation">
